feat(catalog): consume deal-events via Kafka, store active deals locally
- Add product_active_deals table (V9 migration)
- Add DealEventListener to consume deal-created/activated/cancelled/succeeded/failed events
- Add ProductActiveDeal entity and repository
- Replace sync DealServiceClient HTTP calls with local DB reads
- Batch-enrich active deals in toPageResponse for browse queries
- DealServiceClientImpl returns graceful fallbacks on failure